[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "agentguard"
version = "0.1.0"
description = "Policy-based approval gates for AI agent tool calls. Stop rogue agents before they wipe your database."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["ai", "agents", "llm", "safety", "langchain", "autogen"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
slack = ["httpx>=0.27"]
webhook = ["httpx>=0.27"]
langchain = ["langchain>=0.2"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/yourusername/agentguard"
Issues = "https://github.com/yourusername/agentguard/issues"

[tool.pytest.ini_options]
asyncio_mode = "auto"
